[package]
name = "api-server"
version = "0.1.0"
authors = ["raunakab <rabhagat31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix = "0.10.0"
actix-web = "3.3.2"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# uuid
uuid = { version = "0.8", features = ["v4", "serde"] }

# diesel
diesel = { version = "1.4.5", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "1.4.0"

# dotenv
dotenv = "0.15.0"

# actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
# actix-service = "1.0.1"
# actix-rt = "2.0.0"
# chrono = { version = "0.4.10", features = ["serde"] }
# derive_more = "0.99.2"
# diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
# dotenv = "0.15.0"
# futures = "0.3.1"
# r2d2 = "0.8.8"
# serde_derive = "1.0"
# alcoholic_jwt = "1.0.0"
# reqwest = "0.9.22"
